# pygad

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AGENTS.md  DOCTEST_FAILURES.md  Dockerfile  MANIFEST.in  QuickStart.ipynb  README.md  TODO.md  bitbucket-pipelines.yml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  runTestsAll.py  setup.cfg  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/actions/setup-pygad/: action.yml
.github/scripts/: record_traffic.py
.github/traffic/: traffic.json
.github/workflows/: ci.yml  pytest.yml  traffic.yml  workflow.yml
commands/: CmdCatalog.py  CmdStarform.py  CmdTraceGas.py
docker/: Dockerfile
pygad/: __init__.py  _version.py  environment.py  mem_debug.py  tools.py
pygad/C/: Makefile  __init__.py
pygad/C/include/: Faddeeva.hpp  absorption_spectra.hpp  binning.hpp  binning_disp.hpp  eval_sph.hpp  fof.hpp  general.h  general.hpp  halo.h  halo.hpp  kernels.h  kernels.hpp  looploop.hpp  shrinking_sphere.h  tree.hpp  vector_stats.hpp  voigt.hpp
pygad/C/src/: Faddeeva.cpp  absorption_spectra.cpp  binning.cpp  binning_disp.cpp  eval_sph.cpp  fof.cpp  general.cpp  halo.cpp  kernels.cpp  shrinking_sphere.cpp  tree.cpp  voigt.cpp
pygad/analysis/: LSF_data.npy  LSF_data.txt  __init__.py  absorption_spectra.py  analysis.py  fit_profiles.py  halo.py  line_data.csv  lines_LSF_data.txt  profiles.py  properties.py  snap_props.py  snapshot.py  sph_eval.py  vpfit.py
pygad/binning/: 1Dbinning.py  __init__.py  cbinning.py  core.py  mapping.py  oneDbinning.py
pygad/binning/sph/: __init__.py  binning.py  binning_old.py
pygad/cloudy/: __init__.py  cloudy_tables.py  treecol.py
pygad/cmd/: __init__.py  gCache.py
pygad/cmdtool/: gCache.py
pygad/config/: README.txt  derived.cfg  gadget.cfg  units.cfg
pygad/data/: __init__.py  cloudy_tables.py  treecol.py
pygad/decorators/: __init__.py  decorator.py
pygad/doctest/: __init__.py  doctest.py
pygad/doctest_custom/: monkeypatch.py
pygad/gadget/: __init__.py  config.py  gadget.cfg  handler.py  lowlevel_file.py
pygad/kernels/: __init__.py  definitions.py  integral.py  kernels_old.py
pygad/luminosities/: SSP_old.py  __init__.py  bc_ssp.py
pygad/luminosities/SSP-model/: test_table.py
pygad/octree/: __init__.py  coctree.py  octree.py
pygad/physics/: __init__.py  cooling.py  cosmology.py  quantities.py
pygad/plotting/: __init__.py  colormaps.py  general.py  maps.py  plotting_old.py  profiles.py
pygad/snapshot/: __init__.py  derive_rules.py  derived.cfg  derived.py  masks.py  sim_arr.py  snapshot.py  snapshotcache.py
pygad/ssp/: SSP_old.py  __init__.py  bc_ssp.py
pygad/ssp/SSP-model/: README.txt
pygad/tracing/: gtracegaspy3  gtracepy3
pygad/transformation/: __init__.py  transformation.py
pygad/units/: __init__.py  unit_arr.py  units.cfg  units.py
pygad/utils/: __init__.py  geo.py  safe_eval.py  term.py  utils.py
review/: 01-core-units-utils.md  02-snapshot.md  03-gadget-io.md  04-binning-octree-kernels.md  05-analysis-spectra.md  06-analysis-halo.md  07-physics-ssp-trans-cloudy.md  08-plotting.md  09-scripts-build-ci-doctest.md  REVIEW.md
tests/: QuickStart.py  test_bugfixes.py  test_critical_av_nonstr.py  test_critical_avhist.py  test_critical_cbinning_copy.py  test_critical_coctree_len.py  test_critical_cosmo_eq.py  test_critical_eval.py  test_critical_exit1.py  test_critical_global_typo.py  test_critical_jiggle.py  test_critical_parttype.py  test_critical_periodic_wrap.py  test_critical_precedence.py  test_critical_slice_typo.py  test_doctests.py
