[metadata]
name = pygadmpa
description = 'analysis module for Gadget'
long_description = 'A light-weighted analysis module for galaxy simulations performed by the SPH code Gadget.'
url = https://bitbucket.org/broett/pygad/
author_email = broett@mpa-garching.mpg.de
author = Bernhard Roettgers
requires_python = >=3.8.0
license = GPL-2+

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://bitbucket.org/broett/pygad/issues
    Source Code = https://bitbucket.org/broett/pygad


[options]
packages = find:
install_requires =
    numpy<1.25
    matplotlib!=3.7.2,<3.9.0
    astropy<=6.0.1
    scipy<=1.12.0
    h5py<=3.10.0
    Pillow<=10.3.0
include_package_data = True

; [tool:pytest]
; # Options for py.test:
; # Specify command line options as you would do when invoking py.test directly.
; # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
; # in order to write a coverage file that can be read by Jenkins.
; addopts = --color=yes --cov=pygad --cov-report=term -ra --ignore=pygad/test --ignore=pygad/_version.py
; log_cli = 1
; log_cli_level = INFO
; testpaths = pygad/test
; norecursedirs = pygad/test


[versioneer]
VCS = git
style = pep440
versionfile_source = pygad/_version.py
tag_prefix = v
parentdir_prefix = pygad-
